fixed horizontal scroll and backend returning image url for category

--- a/front/src/assets/scss/global.module.scss
+++ b/front/src/assets/scss/global.module.scss
@@ -3,9 +3,9 @@
 
 
 .bg{
-    width:100vw;
+    width:100%;
     height:100vh;
-    overflow-x: hidden;
+    
     &__normal{
         @extend .bg;
         background-color: $color-dark;
