--- a/front/src/components/UI/molecules/MenuBurger/MenuBurger.module.scss
+++ b/front/src/components/UI/molecules/MenuBurger/MenuBurger.module.scss
@@ -7,6 +7,19 @@
         z-index:10;
         position: relative;
         cursor: pointer;
+        transition: all .6s ease-in-out;
+
+    &:hover{
+        .burger{
+            &__line{
+                margin: 1.5px 3px; 
+            }
+        }
+    }
+
+    &__generic{
+        @extend .burger;
+    }
 
     &__normal{
         @extend .burger;
@@ -21,6 +34,7 @@
         }
     }
     &__line{
+        transition: all .15s ease-in-out;
         margin: 3px;
         width: 30px;
         height: 2px;
